# rust-crm

./: .gitignore  Cargo.toml
crm/: Cargo.toml  build.rs  client.rs  server.rs
crm/src/: lib.rs
crm/src/abi/: crm.rs
protos/: crm.proto
user-stat/: .env  Cargo.toml
user-stat/examples/: gen.rs
user-stat/migrations/: 20250308040306_init.sql
