[workspace]
members = ["crm", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.97"
prost = "0.13.5"
prost-build = "0.13.5"
prost-types = "0.13.5"
tonic = { version = "0.12.3", features = ["tls", "zstd"] }
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic-build = "0.12.3"
sqlx = { version = "0.8.3", features = [
    "chrono",
    "runtime-tokio",
    "postgres",
    "tls-rustls",
] }
serde = {version = "1", features = ["derive"]}
chrono = { version = "0.4.40", features = ["serde"] }


