[package]
name = "user-stat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
chrono.workspace = true
rand = "0.9.0"

[dev-dependencies]
fake = { version = "4.0.0", features = ["derive", "chrono"] }
nanoid = "0.4.0"
